# Beemu

./: .clang-format  .gitignore  .gitmodules  100Days.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  test.sh
.github/workflows/: build-test-template.yml  build-test.yml  cmake.yml
docs/: interpreter.md
docs/parser/: emit.md
include/: version.h.in
include/beemu/device/primitives/: instruction.h
include/beemu/device/processor/: executor.h  processor.h  registers.h
include/beemu/internals/: utility.h
include/device/: device.h  memory.h  processor.h  registers.h
include/internals/: utility.h
include/libbeemu/device/: device.h  display.h  memory.h  processor.h  registers.h
include/libbeemu/device/primitives/: instruction.h  register.h
include/libbeemu/device/processor/: executor.h  processor.h  registers.h  tokenizer.h
include/libbeemu/internals/: logger.h  utility.h
libs/: CMakeLists.txt
src/: CMakeLists.txt  beemu.c
src/beemu/device/: CMakeLists.txt  device.c  memory.c
src/beemu/device/processor/: CMakeLists.txt  README.md  executor.c  processor.c  registers.c
src/beemu/device/processor/interpreter/: CMakeLists.txt  command.h
src/beemu/device/processor/interpreter/parser/: CMakeLists.txt  parse_arithmatic.c  parse_arithmatic.h  parse_bitwise.c  parse_bitwise.h  parse_common.c  parse_common.h  parse_jump.c  parse_jump.h  parse_load.c  parse_load.h  parser.c  parser.h
src/beemu/device/processor/tokenizer/: CMakeLists.txt  generate_byte_lookup.py  tokenize_arithmatic.c  tokenize_arithmatic.h  tokenize_cbxx.c  tokenize_cbxx.h  tokenize_common.h  tokenize_jump.c  tokenize_jump.h  tokenize_load.c  tokenize_load.h  tokenize_system.c  tokenize_system.h  tokenizer.c
src/beemu/internals/: CMakeLists.txt  logger.c  utility.c
src/beemu/lldb_scripts/: README.md  emitted_bytecode.py
src/device/: CMakeLists.txt  device.c  memory.c  processor.c  registers.c
src/internals/: CMakeLists.txt  utility.c
src/libbeemu/: CMakeLists.txt
src/libbeemu/device/: CMakeLists.txt  device.c  memory.c  processor.c  registers.c
src/libbeemu/device/processor/: CMakeLists.txt  executor.c  instruction_tokenizer.c  processor.c  registers.c  tokenizer.c
src/libbeemu/device/processor/interpreter/: CMakeLists.txt  command.c  command.h  parser.h
src/libbeemu/device/processor/interpreter/parser/: CMakeLists.txt  parse_arithmatic.c  parse_arithmatic.h  parse_bitwise.h  parse_common.c  parse_common.h  parse_jump.h  parse_load.c  parse_load.h  parser.c  parser.h
src/libbeemu/device/processor/tokenizer/: CMakeLists.txt  bytewidth_lookup_table.gen.h  tokenize_arithmatic.c  tokenize_arithmatic.h  tokenize_arithmatic8.c  tokenize_arithmatic8.h  tokenize_cbxx.c  tokenize_cbxx.h  tokenize_common.c  tokenize_common.h  tokenize_jump.c  tokenize_jump.h  tokenize_load.c  tokenize_load.h  tokenize_load8.c  tokenize_load8.h  tokenize_system.c  tokenize_system.h  tokenizer.c
src/libbeemu/internals/: CMakeLists.txt  logger.c  utility.c
src/libbeemu/lldb_scripts/: README.md  emitted_bytecode.py
tests/: CMakeLists.txt  check_cpu.c  test_executor.cpp  test_registers.cpp
tests/executor/: test_arithmatic.cpp  test_jump.cpp  test_load.cpp
tests/include/: BeemuCommandSerializers.hpp  BeemuMachineSerializers.hpp  BeemuProcessorSerializers.hpp  BeemuTest.cpp  BeemuTest.hpp  BeemuTokenSerializers.hpp  BeemuTokenTest.hpp
tests/interpreter/: BeemuParserTest.cpp  BeemuParserTest.hpp  BeemuParserUtilsTest.cpp  BeemuParserUtilsTest.hpp  test_command_queue.cpp
tests/memory/: test_memory.cpp
tests/processor/: BeemuMemoryTest.cpp  BeemuMemoryTest.hpp  BeemuProcessorTest.cpp  BeemuProcessorTest.hpp  BeemuRegisterTest.cpp
tests/resources/: byte_utils.py  check_missing.py  command_tests.json  gen_arithmatic.py  gen_btw_bloc.py  gen_example_processors.py  gen_jump.py  gen_ld.py  gen_rlarra.py  processors.json  tokens.json  utils.py
tests/resources/command_test_generators/: gen_arithmatic_tests.py  gen_bitwise_tests.py  gen_command_tests.py  gen_jump_tests.py  gen_load_tests.py  utils.py
tests/resources/token_test_generators/: fix_omc.py  gen_arithmatic.py  gen_jump.py  gen_ld.py  gen_system.py  utils.py
tests/tokenizer/: test_tokens.cpp
tests/utilities/: BeemuProcessorPreset.cpp  BeemuProcessorPreset.hpp
